src/webapp/components/uiOptions/css/FatPanelUIOptions.css
/* UI Options Fat Panel styles */

.fl-uiOptions-fatPanel {
	min-width: 960px;
}

/* Top bar and show/hide button */
.fl-uiOptions-fatPanel .fl-panelBar {
	width: 100%;
	height: 5px;
	background-color: #fff;
	border-bottom: 1px solid #ccc;	
}

.fl-uiOptions-fatPanel .fl-toggleButton {
	float:right;
	text-transform: uppercase;
	font-weight: bold;	
	border: 0px;
	background-color: white;	
	padding: 5px;
	margin-right: 10px;
	border-radius: 8px;	
	border-bottom: 1px solid #ccc;
}

.fl-uiOptions-fatPanel #reset {
	background-color: #333333;
	color: #fff;	
	text-transform: uppercase;
	font-weight: bold;
	display: block;
}

.fl-theme-hc .fl-uiOptions-fatPanel #reset {
	background-color: #000;
}

.fl-theme-hci .fl-uiOptions-fatPanel #reset {
	background-color: #fff;
	color: #000;	
}


/* Form */
.fl-uiOptions-fatPanel .fl-uiOptions-text li {
	float: left;
}
.fl-uiOptions-fatPanel .fl-uiOptions-layout li, .fl-uiOptions-fatPanel .fl-uiOptions-links li {
	clear: both;
}
.fl-uiOptions-fatPanel .fl-uiOptions label {
	text-transform: uppercase;
	/*font-size: 1.2em;*/
	padding-bottom: 15px;
	width: 200px;
}

.fl-uiOptions-fatPanel .fl-inputs {
	clear:both;
}

/* Tabs */
.fl-uiOptions-fatPanel ul.fl-tabs {	
	background-color: #333333;
	color: #fff;		
	height: 2.5em;	
}	

.fl-uiOptions-fatPanel .fl-tabs li a {
	background-color: #333333;
	color: #fff;	
	text-transform: uppercase;
	font-weight: bold;
	border: 0px;	
	margin-right: 10px;
}

.fl-uiOptions-fatPanel .fl-tabs .ui-tabs-selected a {
	background-color: #fff;
	color: #000;
}

/* Tab images */
.fl-uiOptions-fatPanel .fl-tab-text, .fl-uiOptions-fatPanel .fl-tab-layout, .fl-uiOptions-fatPanel .fl-tab-links, .fl-uiOptions-fatPanel #reset {
	background-repeat: no-repeat;
	background-position: 10px 5px;
}
.fl-uiOptions-fatPanel .fl-tab-text { background-image: url('../images/uio_icon_textanddisplay_inverted_16x16.png'); }
.fl-uiOptions-fatPanel .fl-tab-layout { background-image: url('../images/uio_icon_layoutandnavigation_inverted_16x16.png'); }
.fl-uiOptions-fatPanel .fl-tab-links { background-image: url('../images/uio_icon_linksandbuttons_inverted_16x16.png'); }

.fl-uiOptions-fatPanel .ui-tabs-selected .fl-tab-text { background-image: url('../images/uio_icon_textanddisplay_16x16.png'); }
.fl-uiOptions-fatPanel .ui-tabs-selected .fl-tab-layout { background-image: url('../images/uio_icon_layoutandnavigation_16x16.png'); }
.fl-uiOptions-fatPanel .ui-tabs-selected .fl-tab-links { background-image: url('../images/uio_icon_linksandbuttons_16x16.png'); }
.fl-uiOptions-fatPanel #reset { background-image: url('../images/uio_icon_reset_16x16.png'); }

/
 * jQuery UI Tabs 1.8.12
 *
 * Copyright 2011, AUTHORS.txt (http://jqueryui.com/about)
 * Dual licensed under the MIT or GPL Version 2 licenses.
 * http://jquery.org/license
 *
 * http://docs.jquery.com/UI/Tabs#theming
 */
.ui-tabs { position: relative; padding: .2em; zoom: 1; } /* position: relative prevents IE scroll bug (element with position: relative inside container with overflow: auto appear as "fixed") */
.fl-theme-hci .ui-tabs .ui-tabs-nav, .fl-theme-hc .ui-tabs .ui-tabs-nav, .ui-tabs .ui-tabs-nav { margin: 0; padding: .2em .2em 0; }
.fl-theme-hc .ui-tabs .ui-tabs-nav li , .fl-theme-hci .ui-tabs .ui-tabs-nav li , .ui-tabs .ui-tabs-nav li { list-style: none; float: left; position: relative; top: 1px; margin: 0 .2em 1px 0; border-bottom: 0 !important; padding: 0; white-space: nowrap; }
.ui-tabs .ui-tabs-nav li a { float: left; padding: .5em 1em; text-decoration: none; }
.ui-tabs .ui-tabs-nav li.ui-tabs-selected { margin-bottom: 0; padding-bottom: 1px; }
.ui-tabs .ui-tabs-nav li.ui-tabs-selected a, .ui-tabs .ui-tabs-nav li.ui-state-disabled a, .ui-tabs .ui-tabs-nav li.ui-state-processing a { cursor: text; }
.ui-tabs .ui-tabs-nav li a, .ui-tabs.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-selected a { cursor: pointer; } /* first selector in group seems obsolete, but required to overcome bug in Opera applying cursor: text overall if defined elsewhere... */
.ui-tabs .ui-tabs-panel { display: block; border-width: 0; padding: 1em 1.4em; background: none; }
.ui-tabs .ui-tabs-hide { display: none !important; }
.fl-theme-hci .ui-widget, .fl-theme-hci.ui-widget, .fl-theme-hc .ui-widget, .fl-theme-hci.ui-widget { font-family: "Myriad Pro",Helvetica,Arial,sans-serif; }


/* jQuery UI Tabs style overrides */
.ui-tabs { padding: 0px; }
.ui-tabs .ui-tabs-nav li a, .fl-uiOptions-fatPanel #reset { padding: 0.75em 1em 0.75em 30px; line-height: 1;}
.fl-theme-hc .ui-tabs .ui-tabs-nav li a { float: left; padding: 0.75em 1em 0.75em 30px; text-decoration: none; }
.fl-theme-hci .ui-tabs .ui-tabs-nav li a { float: left; padding: 0.75em 1em 0.75em 30px; text-decoration: none; }
.fl-theme-hc .ui-tabs .ui-tabs-panel, .fl-theme-hci .ui-tabs .ui-tabs-panel, .ui-tabs .ui-tabs-panel { padding: 10px; }

.fl-theme-hc .ui-widget { font-size: 1em; } /* fix a jquery HC theme bug where font-size was set to 1.2em. */

.fl-theme-hci .ui-widget-header .ui-state-default, .fl-theme-hc .ui-widget-header .ui-state-default { border: 0; } /* remove border added by HC and HCI themes */
.fl-theme-hci .ui-tabs, .fl-theme-hc .ui-tabs { padding: 0; } /* remove extra padding used by HC and HCI themes */
.fl-theme-hci .ui-tabs, .fl-theme-hc .ui-tabs { position: inherit; } /* Override HC and HCI style so Reset button reappears properly. */

/* Override HC and HCI tab rounding */
.fl-theme-hc .ui-corner-top, .fl-theme-hci .ui-corner-top { -moz-border-radius-topleft: 0px; -moz-border-radius-topright: 0px; }
.fl-theme-hci .ui-corner-all , .fl-theme-hc .ui-corner-all { -moz-border-radius: 0px; border: 0px; }

/* Override HC and HCI changes to tab header background color */
.fl-theme-hci .ui-widget-header { background: 0;}
.fl-theme-hci .fl-uiOptions-fatPanel ul.fl-tabs  { background-color: #fff; }
.fl-theme-hc .ui-widget-header { background: 0;}
.fl-theme-hc .fl-uiOptions-fatPanel ul.fl-tabs { background-color: #000; }

/* Override HC and HCI changes to tab color */
.fl-theme-hci .fl-uiOptions-reset, .fl-theme-hci .fl-uiOptions-fatPanel .fl-tabs a { background-color: #fff; color: #000; }
.fl-theme-hci .fl-uiOptions-fatPanel .fl-tabs .ui-tabs-selected a { background-color: #000; color: #fff; }
.fl-theme-hc .fl-uiOptions-reset, .fl-theme-hc .fl-uiOptions-fatPanel .fl-tabs a  { background-color: #000; color: #fff; }
.fl-theme-hc .fl-uiOptions-fatPanel .fl-tabs .ui-tabs-selected a { 	background-color: #fff;	color: #000; }

/* override HC and HCI styling for slider */
.fl-theme-hc .ui-widget-content { 

}
.fl-theme-hc  .fl-uiOptions .fl-slider-horz {
    border-radius: 100% 100% 100% 100%;
    height: 3px;

}

.fl-theme-hc .fl-uiOptions .fl-slider {
    background-color: #000;
    padding: 0;
    position: relative;
}

/* Sliders */
.fl-uiOptions-fatPanel .fl-slider a { background-image:url('../images/uio_icon_sliderhandle.png');}

.fl-uiOptions .fl-slider-horz {
    width: 100px;
}

.fl-uiOptions .fl-slider-input {
	clear: both;
	float:left;
	margin-top: 1em;
}

/* Tab Pane */
ul.fl-pane li {
	float:left;
	padding-left: 10px;
	margin-right: 30px;
}

/* Text Pane */

#min-text-size { clear: both; }

